2005-10-31  Jim Huang  <jserv@kaffe.org>

	* tobacco-sqlconvert_general.pl,
	punctuation.src: New file.
	
	* tobacco-sqlconvert.pl,
	OVIMTobacco.cpp,
	PredictorSingleton.cpp,
	Makefile: Updated to OpenVanilla repository 2005-10-31.

2005-08-12  Jim Huang  <jserv@kaffe.org>

	* include/OVLibrary.h,
	include/OVCIN.h,
	include/OVStringToolKit.h,
	include/OVFileHandler.h,
	include/OVPhoneticLib.h: Removed since unused.

	* OVIMTobacco.cpp: Likewise.

2005-08-11  Jim Huang  <jserv@kaffe.org>

	* Initial import of OVIMTobacco from OpenVanilla subversion
	repository.
	Modifications: Adjust make rules and directory layout.